hard-gists/5480533/run.log
=== Docker Run Log for 5480533 ===
Started at: Mi 29. Okt 15:43:17 CET 2025

[2025-10-29 15:43:18] START: Running container for 5480533
[2025-10-29 15:43:18] SUCCESS: Container a4b1b5fdcf97acbaf5a37107c4d0af7dce24ebdb49e6d651851a4699acd54178 started for 5480533
=== Container logs for 5480533 ===
  File "/snippet.py", line 59
    print "Attempting to send email"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5480533 ===
[2025-10-29 15:43:20] INFO: Container a4b1b5fdcf97acbaf5a37107c4d0af7dce24ebdb49e6d651851a4699acd54178 has stopped
